# multi-get

./: .clangd  .gitignore  CMakeLists.txt  README.md  main.cpp  version.h.in
docs/: Basics.md  HTTPS.md  HTTP_parse.md  HTTP_socket.md  MultiThread.md  socks5.md
include/: CommonDefines.h  Connection.h  HTTPConnection.h  HTTPResponse.h  HTTPSConnection.h  Logger.h  PlainConnection.h  Pool.h  SSLConnection.h  Socket.cpp  Socket.h  Utils.h
os/unix/: UnixSocket.cpp  UnixSocket.h
os/win/: WinSocket.cpp  WinSocket.h
src/: Connection.cpp  HTTPConnection.cpp  HTTPResponse.cpp  HTTPSConnection.cpp  SSLConnection.cpp  Utils.cpp  main.cpp
